src/feature/asset/snapshots/wallet_live__feature__asset__controller_tests__create_asset.snap
---
source: src/feature/asset/controller_tests.rs
expression: new_asset
---
{
  "id": 1,
  "name": "Test",
  "unit_value": 0.0
}
