src/feature/asset/snapshots/wallet_live__feature__asset__controller_tests__list_assets.snap
---
source: src/feature/asset/controller_tests.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.0
  }
]
