src/feature/asset/snapshots/wallet_live__feature__asset__controller_tests__update_asset.snap
---
source: src/feature/asset/controller_tests.rs
expression: updated_asset
---
{
  "id": 1,
  "name": "Test",
  "unit_value": 20.0
}
